--- a/views/partials/scriptPartials/newCommentFormTemplate.handlebars
+++ b/views/partials/scriptPartials/newCommentFormTemplate.handlebars
@@ -7,7 +7,7 @@
       <p><br></p>
     </div>
   </div>
-    <div class="link-form-cont"> {{! this is only here bc jquery applies display:block when it slides something down, which would break the below div if it slid down that}}
+    <div class="link-form-cont"> {{! this container is only here bc jquery applies display:block when it slides something down, which would break the below div if it slid it down, as it needs to be display:flex}}
     <div class="my-2 linkPreviewAddingForm">
       <input type="text" class="form-control" name="linkPreviewUrlEntry" id="linkPreviewUrlEntry" placeholder="Enter a url..." />
       <button class="btn btn-primary btn-fade ml-3 link-add">Please Add This Link He Is A Good Link</button>
