--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -67,7 +67,7 @@
             </aside>
             <div class="abbreviated-content content-warning-content" style="height:0">
         {{/if}}
-        {{{this.parsedContent}}}
+        {{{this.internalPostHTML}}}
         {{#if this.contentWarnings}}
             </div>
             <button type="button" class="button grey-button content-warning-show-more" data-state="contracted">Show post</button>
