--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -41,7 +41,7 @@ $(function() {
 
       // Handle standalone images
       $imagesAlone.each(function (index, element) {
-          $(element).simpleLightbox(params);
+          $(element).simpleLightbox();
           imagesLightboxed++;
       });
 
@@ -58,7 +58,7 @@ $(function() {
               var filteredGroup = $imagesGrouped.filter(function () { //could this be .find instead of .filter so that it just finds the one instance and stops
                   return $(this).data('group') == value;
               })
-              filteredGroup.simpleLightbox(params);
+              filteredGroup.simpleLightbox();
               imagesLightboxed += filteredGroup.length;
           });
           console.log("images lightboxed: " + imagesLightboxed)
